--- a/retrofit-spring-boot-samples/pom.xml
+++ b/retrofit-spring-boot-samples/pom.xml
@@ -33,6 +33,10 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-metrics-event-stream</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
