添加gradle忽略文件配置

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,15 @@ target/
 *.iml
 *.ipr
 
+# Gradle Files #
+################
+.gradle
+.m2
+
+# Build output directies
+target/
+build/
+
 ### NetBeans ###
 nbproject/private/
 build/
