--- a/retrofit-core-spring-boot/build.gradle
+++ b/retrofit-core-spring-boot/build.gradle
@@ -1,13 +1,12 @@
 dependencies {
-  compile 'com.squareup.retrofit2:converter-gson'
-  compile 'com.squareup.retrofit2:converter-jackson'
   compile 'com.squareup.retrofit2:retrofit'
   compile 'org.springframework.boot:spring-boot-autoconfigure'
-  compile 'org.springframework.boot:spring-boot-starter'
-  compile 'org.springframework.boot:spring-boot-configuration-processor'
 
+  compileOnly 'com.squareup.retrofit2:converter-jackson'
+  compileOnly 'com.squareup.retrofit2:converter-gson'
   compileOnly 'com.netflix.hystrix:hystrix-core'
   compileOnly 'org.projectlombok:lombok'
+  compileOnly 'org.springframework.boot:spring-boot-configuration-processor'
 
   testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
