--- a/retrofit-core-spring-boot/build.gradle
+++ b/retrofit-core-spring-boot/build.gradle
@@ -10,4 +10,7 @@ dependencies {
   compileOnly 'org.springframework.boot:spring-boot-starter-logging'
 
   testCompile 'org.springframework.boot:spring-boot-starter-test'
+  testCompile 'com.github.tomakehurst:wiremock-standalone:2.12.0'
+  testCompile 'com.netflix.hystrix:hystrix-core'
+
 }
