--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
 
 subprojects {
   apply plugin: 'java'
+  apply plugin: 'maven'
   apply plugin: "org.springframework.boot"
 
   sourceCompatibility = 1.8
