--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ allprojects {
 subprojects {
   apply plugin: 'java'
   apply plugin: 'maven'
-  apply plugin: "org.springframework.boot"
+  apply plugin: 'org.springframework.boot'
 
   sourceCompatibility = 1.8
   targetCompatibility = 1.8
